2004-04-11  Marcus Brinkmann  <marcus@gnu.org>

	* physmem.c (get_task_cap): New function.
	(main): Call get_task_cap.

	* container.c (container_reinit): Unmap the fpages before
	returning them to the pool.

2004-04-10  Marcus Brinkmann  <marcus@gnu.org>

	* container.c: Include <l4/space.h>.  Use L4_FPAGE_SPAN_MAX
	instead MAX_FPAGES everywhere.
	(container_reinit): New function.
	(container_class_init): Pass container_reinit as reinit function.
	(MAX_FPAGES): Removed.

2004-04-09  Marcus Brinkmann  <marcus@gnu.org>

	* container.c: Revert last change.
	* physmem.h: Revert last change.
	* physmem.c (MAX_FPAGES): Removed macro.
	(create_bootstrap_caps): Use L4_FPAGE_SPAN_MAX, not MAX_FPAGES.
	Update bootstrap cap code to new wortel interface (essentially
	reverting the last change).

	* physmem.h: Include <stdbool.h>.
	* container.c (struct container): Add member mapped.
	(container_alloc): Add new argument mapped.  Initialize
	CONTAINER->mapped.

	* Makefile.am (physmem_LDADD): Add
	../libhurd-cap-server/libhurd-cap-server.a and
	../libhurd-slab/libhurd-slab.a.
	(physmem_SOURCES): Add container.c.
	* container.c: New file.
	* physmem.h: Include <hurd/cap-server.h> and <errno.h>.
	(container_class_init, container_alloc): New prototypes.
	* physmem.c (create_bootstrap_caps): Take new argument bucket.
	Create container capabilities and inject them into the bucket.
	(getpagesize): New temporary helper function.
	(physmem_server): New function.
	(main): New variable BUCKET.  Create capability bucket.  Pass
	BUCKET to create_bootstrap_caps.  New variable MANAGER.  Create
	manager thread.

2004-04-06  Marcus Brinkmann  <marcus@gnu.org>

	* physmem.c (setup_threads): Add threads to pool after creating
	main thread.  Don't overwrite server_thread with an incorrect
	value at the end.

2004-03-19  Marcus Brinkmann  <marcus@gnu.org>

	* physmem.c (WORTEL_MSG_GET_THREADS): New macro.
	(setup_threads): Request number of extra threads from wortel.  Add
	them to the pool.
